tests/fixtures/pass/runtime_division_by_zero.sc
let divide(value: i32): i32 = 42 / value

let main(): i32 = {
  let zero = 0
  divide(zero)
}
