tests/fixtures/fail/region_name_with_type_kind.sc
let read('a: type)(value: i32): i32 = { value }
let main(): i32 = { 42 }
